--- a/.env
+++ b/.env
@@ -30,3 +30,13 @@ APP_SECRET=1469be6eb3a401593c57f0ed550f47a0
  DATABASE_URL="mysql://root:@127.0.0.1:3306/symReact"
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=508a88bde9c8b747cbdcd1d139822235
+###< lexik/jwt-authentication-bundle ###
